# zecurity

./: .gitignore  .note.md  AGENTS.md  CLAUDE.md  CLIENT_PLAN.md  Dockerfile.aarch64-unknown-linux-musl-custom  Dockerfile.x86_64-unknown-linux-musl-custom  Makefile  agent.md  buf.gen.yaml  buf.yaml  cert-renewal-phased-plan.md  cert-renewal-plan.md  codebase.md  connector-sprint-plan-v3.md  fullplan.md  implementation-report-connector-phase.md  implementation-report.md  improvements.md  member1-plan.md  member1-updated-plan.md  member2-plan.md  member3-plan.md  member4-plan.md  package-lock.json  sprint4-shield-plan.md  studyplan.md
.github/workflows/: client-release.yml  connector-release.yml  shield-release.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
.understand-anything/tmp/: ua-project-scan.js  ua-scan-results.json
.zecurity-obs/: Home.md  Sprint10-Consolidated.md  Study-Plan.md  improvements.md
.zecurity-obs/.obsidian/: graph.json  workspace.json
.zecurity-obs/Architecture/: Connector Lifecycle.canvas  Connector Lifecycle.excalidraw.md  System Overview.canvas  System Overview.excalidraw.md
.zecurity-obs/CodeStudy/: 01-Auth-Flow.md  02-Invite-Flow.md  02-Protect-Resource-Flow.md  03-RemoteNetwork-Flow.md  04-Connector-Enrollment-Flow.md  06-Auth-Audit.md  07-Connector-Audit.md
.zecurity-obs/Decisions/: ADR-001-Sprint8-ACL-Snapshot-Caching.md  ADR-002-Client-Daemon-Required.md  ADR-003-Client-TUN-Transparent-Proxy.md  ADR-004-Resource-Reconciliation.md  ADR-005-Email-Normalization.md  ADR-006-Refresh-Token-Rotation.md  ADR-007-JWT-Secret-Minimum-Length.md  ADR-008-Drop-InstallCommand-From-Mutation.md  ADR-009-GraphQL-DoS-Hardening.md  ADR-010-Controller-Code-Quality-Improvements.md  ADR-010-Server-Owned-Public-Operation-Routing.md  ADR-011-Connector-Enrollment-Lifecycle-Hardening.md  ADR-012-Enrollment-Token-Hardening.md  ADR-013-SnapshotCache-Epoch-CAS.md  ADR-014-Client-Port-Based-Split-Tunneling.md  ADR-014-Connector-Enrollment-Concurrency-Safety.md  ADR-014-Relay-Stabilization.md  ADR-015-SPIFFE-Interceptor-Chain-Verification-Hardening.md  ADR-015-Transport-Control-Plane.md  ADR-016-Controller-Labelled-Connector-Probed-Relay.md  ADR-016-Placement-Engine.md  ADR-017-Transport-Propagation.md  ADR-018-Migration-Strategy.md
.zecurity-obs/Excalidraw/: Drawing 2026-04-27 10.44.24.excalidraw.restored.md
.zecurity-obs/Planning/: Relay-Roadmap.md  Roadmap.md  Session Log.md
.zecurity-obs/Services/: Auth.md  Connector.md  Controller.md  PKI.md  Relay-Operational-Validation.md  Shield.md
.zecurity-obs/Sprint10/: path.md
.zecurity-obs/Sprint10.1/: path.md
.zecurity-obs/Sprint10.2/: path.md
.zecurity-obs/Sprint10.3/: path.md
.zecurity-obs/Sprint11/: path.md
.zecurity-obs/Sprint11.2/: path.md
.zecurity-obs/Sprint11.3/: path.md
.zecurity-obs/Sprint4/: path.md  team-workflow.md
.zecurity-obs/Sprint5/: path.md  team-workflow.md
.zecurity-obs/Sprint6/: path.md  team-workflow.md
.zecurity-obs/Sprint7/: path.md
.zecurity-obs/Sprint8/: path.md
.zecurity-obs/Sprint8.5/: Invitation-Bugs-Remaining.md  path.md
.zecurity-obs/Sprint9/: path.md
.zecurity-obs/docs/: acl-sync-architecture.md
.zecurity-obs/redis-to-valkey-migration/: Checklist.md  Commit1-Infrastructure.md  Commit2-EnvVar-Rename.md  Commit3-Client-Swap.md  Overview.md
admin/: codegen.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx
agent-instructions/: phase-2-core-types-db.md  phase-3-middleware.md  phase-4-gqlgen-setup.md  phase-5-resolvers.md  phase-6-main-env.md
client/: Cargo.toml  Cross.toml  build.rs  zecurity-client.service
client/scripts/: client-install.sh
client/src/: appmeta.rs  auth.rs  config.rs  daemon.rs  daemon_tests.rs  error.rs  grpc.rs  ipc.rs  login.rs  main.rs  net_stack.rs  relay_pool.rs  runtime.rs  state_store.rs  transport.rs  tun.rs  tunnel_pool.rs
client/src/cmd/: connect.rs  down.rs  invite.rs  login.rs  logout.rs  resources.rs  setup.rs  status.rs  sync.rs  up.rs
client/systemd/: zecurity-client.service
connector/: Cargo.toml  Cross.toml  Dockerfile  build.rs  docker-compose.yml
connector/proto/: connector.proto
connector/scripts/: connector-install.sh
connector/src/: agent_server.rs  agent_tunnel.rs  appmeta.rs  config.rs  control_stream.rs  controller_client.rs  crl.rs  crypto.rs  device_tunnel.rs  enrollment.rs  heartbeat.rs  lib.rs  main.rs  net_util.rs  quic_listener.rs  relay_attachment.rs  relay_client.rs  relay_handler.rs  relay_probe.rs  relay_ranking.rs  relay_selector.rs  renewal.rs  tls.rs  updater.rs  util.rs  watchdog.rs
connector/src/discovery/: mod.rs  scan.rs  scope.rs  service_detect.rs  tcp_ping.rs
connector/src/policy/: mod.rs
connector/src/tls/: cert_store.rs  mod.rs  server_cfg.rs
connector/systemd/: zecurity-connector-update.service  zecurity-connector-update.timer  zecurity-connector.service
connector/tests/: scenario4_probe_security.rs
connector/tests/common/: mod.rs
controller/: .env.example  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum
relay/: Cargo.toml  build.rs
relay/pki/: relay.csr
relay/src/: appmeta.rs  config.rs  csr.rs  heartbeat.rs  listener.rs  main.rs  protocol.rs  provision.rs  session.rs  spiffe.rs  state.rs  tls.rs
relay/systemd/: zecurity-relay.service
scripts/: client-local-install.sh  client-uninstall.sh  connector-local-install.sh  connector-uninstall.sh  relay-local-install-omitid.sh  relay-local-install.sh  relay-uninstall.sh  run-relay-local.sh  shield-local-install.sh  shield-uninstall.sh  sprint10_2_final_check.sh
shield/: Cargo.toml  Cross.toml  Dockerfile  build.rs
shield/scripts/: shield-install.sh
shield/src/: appmeta.rs  config.rs  control_stream.rs  crypto.rs  discovery.rs  enrollment.rs  heartbeat.rs  main.rs  network.rs  renewal.rs  resources.rs  tls.rs  tunnel.rs  types.rs  updater.rs  util.rs
shield/systemd/: zecurity-shield-update.service  zecurity-shield-update.timer  zecurity-shield.service
(+390 files in other folders)
