[package]
name = "zecurity-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zecurity-client"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
dirs       = "5"
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
thiserror  = "1"

# Phase 2 — add now so they compile clean:
tonic      = { version = "0.12", features = ["tls"] }
prost      = "0.13"
open       = "5"
rcgen      = "0.13"
sha2       = "0.10"
base64     = "0.22"
rand       = "0.8"
axum       = "0.7"
reqwest    = { version = "0.12", features = ["json", "native-tls"], default-features = false }
hostname   = "0.4"
urlencoding = "2"
serde_json         = "1"
libc               = "0.2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm     = "0.10"
x509-parser = "0.16"

# Phase 5 — add now so they compile clean:
tun         = { version = "0.6", features = ["async"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls       = { version = "0.23", default-features = false, features = ["ring", "tls12", "std", "logging"] }
rustls-pemfile = "2"

# Sprint 9 — Client TUN + QUIC pool:
quinn              = "0.11"
quinn-proto        = "0.11"
smoltcp            = { version = "0.11", features = ["proto-ipv4", "socket-tcp", "socket-udp"] }
rtnetlink          = "0.14"
netlink-packet-route = "0.19"
futures            = "0.3"

[build-dependencies]
tonic-build = "0.12"
