  [package]
  name = "zecurity-relay"
  version = "1.0.0"
  edition = "2021"

  [dependencies]
  anyhow = "1"
  bytes = "1"
  dashmap = "6"
  quinn = "0.11"
  rustls = { version = "0.23", features = ["ring"] }
  rustls-pemfile = "2"
  serde = { version = "1", features = ["derive"] }
  serde_json = "1"
  tokio = { version = "1", features = ["full"] }
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = ["env-filter"] }
  uuid = { version = "1", features = ["v4"] }
  x509-parser = "0.18"
  url = "2"
  rcgen = "0.13"
  rustls-pki-types = "1"